<!--
  ~ Copyright (c) 2021. Created by charr0max  -> manuelrg88@gmail.com
  -->

<resources>
    <string name="app_name">GardenBot</string>
    <string name="user_login">Nombre de Usuario</string>
    <string name="password_login">Contraseña</string>
    <string name="login_button">Login</string>
    <string name="not_reg_message">Aún no te registraste? </string>
    <string name="click_here">Click aquí</string>
    <string name="login">Login</string>
    <string name="pwd_label">Contraseña</string>
    <string name="username_label">Nombre de usuario</string>
    <string name="email_label">email</string>
    <string name="register_label">Registro</string>
    <string name="empty_fields_message">Los campos no pueden estar vacíos!</string>
    <string name="all_fields_required_message">Todos los campos son requeridos!</string>
    <string name="chart_title">Información Ambiental</string>
    <string name="chart_y_axis_title">% y °C</string>
    <string name="serial_number_hint">Número de serie</string>
    <string name="continue_text">Continuar</string>
    <string name="chart_data_title">Chart Data</string>
    <string name="onboarding_page_1_message">Para comenzar por favor ingresa el codigo de tu dispositivo</string>
    <string name="onboarding_2_message">Ahora por favor enciende tu GardenBot para comenzar el proceso de activación</string>
    <string name="init_activation">Iniciando activación...</string>
    <string name="error_empty_device_name">Parece que hubo un error al activar tu GardenBot</string>
    <string name="awaiting_connection">Esperando conexión con tu GardenBot</string>
    <string name="control_manual">Control Manual</string>
    <string name="lamp_label">Lámpara</string>
    <string name="ventilador">Ventilador</string>
    <string name="extractor">Extractor</string>
    <string name="intractor">Intractor</string>
    <string name="network_error_message">Ocurrió un error de red, por favor revisa tu conexión</string>
    <string name="empty_username_input">El nombre de usuario no puede estar vacío!</string>
    <string name="dont_forget_me">No te olvides de mi!</string>
    <string name="register">Register</string>
    <string name="gardenhome">GardenHome</string>
    <string name="welcome">Bienvenidx!</string>
    <string name="notifications_label">Notificaciones</string>
    <string name="chart_no_data_message">Intenta refrescar  el gráfico tocando aquí</string>
    <string name="air_temp_chart_label">Temperatura Ambiental</string>
    <string name="air_hum_chart_label">Humedad Ambiental</string>
    <string name="soil_hum_chart_label">Humedad en suelo</string>
    <string name="params_screen_subtitle">Ajusta los límites de funcionamiento automático y GardenBot intentará mantenerse dentro de los rangos que especifiques</string>
    <string name="params_screen_title">Parámetros de piloto automático</string>
    <string name="air_temp_parameters">Parámetros de Temperatura Ambiental</string>
    <string name="air_hum_parameters">Parámetros de Humedad Ambiental</string>
    <string name="soil_hum_parameters">Parámetros de Humedad en suelo</string>
    <string name="vent_mode">Ciclo de Ventilación: %s</string>
    <string name="time_lamp_on">Encendido\nde Lámpara:</string>
    <string name="time_lamp_off">Apagado\nde Lámpara:</string>
    <string name="update_gardenbot">ACTUALIZAR GARDENBOT</string>
    <string name="send_to">Elige con qué app deseas compartir</string>
</resources>