<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021. Created by charr0max  -> manuelrg88@gmail.com
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_small"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logo_leaf"
        app:layout_constraintBottom_toTopOf="@+id/username_ed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        tools:targetApi="lollipop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="2dp"
        android:text="@string/username_label"
        android:textAllCaps="true"
        android:textColor="@color/light_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username_ed"
        app:layout_constraintStart_toStartOf="@+id/username_ed" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/new_ed_txt_bg"
        android:elevation="16dp"
        android:hint="@string/user_login"
        android:padding="20dp"
        android:paddingHorizontal="32dp"
        android:textColorHint="@color/gardenbot_green_light"
        app:layout_constraintBottom_toTopOf="@+id/password_ed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/logo_small"
        tools:targetApi="lollipop" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/new_ed_txt_bg"
        android:elevation="16dp"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/gardenbot_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_ed" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="2dp"
        android:text="@string/pwd_label"
        android:textAllCaps="true"
        android:textColor="@color/light_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/password_ed"
        app:layout_constraintStart_toStartOf="@+id/password_ed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_btn"
        style="@style/GardenButton"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:translationX="-4dp"
        android:elevation="8dp"
        android:paddingVertical="20dp"
        android:text="@string/login_button"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:shadowDy="3"
        android:shadowDx="3"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/logo_small"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_ed"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/not_reg_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_reg_message"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/not_reg_text_click"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_btn"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/not_reg_text_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:textSize="20sp"
        android:layout_marginStart="4dp"
        android:text="@string/click_here"
        android:textColor="@color/gardenbot_green"
        app:layout_constraintBottom_toBottomOf="@+id/not_reg_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/not_reg_txt" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>