<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021. Created by charr0max  -> manuelrg88@gmail.com
  -->

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/GardenFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_margin="8dp"
        android:background="@drawable/bg_transparent_gray_stroke">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/control_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ToggleButton
                android:id="@+id/ventilator"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/ventilador_button_selector"
                android:elevation="2dp"
                android:text="@string/ventilador"
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/lamp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ToggleButton
                android:id="@+id/intractor"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/intractor_button_selector"
                android:elevation="2dp"
                android:text="@string/intractor"
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/extractor"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ToggleButton
                android:id="@+id/extractor"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/extractor_button_selector"
                android:elevation="2dp"
                android:text="@string/extractor"
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/intractor"
                app:layout_constraintStart_toEndOf="@+id/lamp"
                app:layout_constraintTop_toTopOf="parent" />

            <ToggleButton
                android:id="@+id/lamp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/lamp_button_selector"
                android:elevation="2dp"
                android:text="@string/lamp_label"
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/extractor"
                app:layout_constraintStart_toEndOf="@+id/ventilator"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <TextView
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@color/full_white"
        android:paddingHorizontal="4dp"
        android:text="@string/control_manual" />


</com.google.android.material.card.MaterialCardView>