<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021. Created by charr0max  -> manuelrg88@gmail.com
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="2dp"
        android:text="@string/username_label"
        android:textAllCaps="true"
        android:textColor="@color/light_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username_ed"
        app:layout_constraintStart_toStartOf="@+id/username_ed"
        app:layout_constraintVertical_chainStyle="spread" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/new_ed_txt_bg"
        android:elevation="16dp"
        android:hint="@string/user_login"
        android:inputType="text"
        android:padding="20dp"
        android:paddingHorizontal="32dp"
        android:textColorHint="@color/gardenbot_green_light"
        app:layout_constraintBottom_toTopOf="@+id/password_ed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/logo_small"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/logo_small"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="10"
        android:src="@drawable/ic_logo_leaf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="2dp"
        android:text="@string/pwd_label"
        android:textAllCaps="true"
        android:textColor="@color/light_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/password_ed"
        app:layout_constraintStart_toStartOf="@+id/password_ed" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/new_ed_txt_bg"
        android:elevation="16dp"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/gardenbot_green_light"
        app:layout_constraintBottom_toTopOf="@+id/repeat_pwd_ed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/username_ed" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="2dp"
        android:text="Repetir Contraseña"
        android:textAllCaps="true"
        android:textColor="@color/light_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/repeat_pwd_ed"
        app:layout_constraintStart_toStartOf="@+id/repeat_pwd_ed" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/repeat_pwd_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/new_ed_txt_bg"
        android:elevation="16dp"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/gardenbot_green_light"
        app:layout_constraintBottom_toTopOf="@+id/email_ed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/password_ed" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="2dp"
        android:text="@string/email_label"
        android:textAllCaps="true"
        android:textColor="@color/light_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email_ed"
        app:layout_constraintStart_toStartOf="@+id/email_ed" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/new_ed_txt_bg"
        android:elevation="16dp"
        android:hint="email@stoner420.com"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColorHint="@color/gardenbot_green_light"
        app:layout_constraintBottom_toTopOf="@+id/submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat_pwd_ed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_btn"
        style="@style/GardenButton"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:elevation="8dp"
        android:paddingVertical="20dp"
        android:shadowDx="3"
        android:shadowDy="3"
        android:text="@string/register_label"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationX="-2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/logo_small"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>